--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -90,6 +90,8 @@
         android:id="@+id/value2"
         android:layout_width="177dp"
         android:layout_height="47dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="value"
