--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,95 +6,90 @@
     android:layout_height="match_parent"
     tools:context=".searchActivity">
 
-    <Button
-        android:id="@+id/byTag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="by tag"
-        tools:layout_editor_absoluteX="93dp"
-        tools:layout_editor_absoluteY="263dp" />
-
-    <Button
-        android:id="@+id/byDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="by date"
-        tools:layout_editor_absoluteX="202dp"
-        tools:layout_editor_absoluteY="263dp" />
 
     <EditText
-        android:id="@+id/key"
-        android:layout_width="195dp"
-        android:layout_height="46dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="key"
-        tools:layout_editor_absoluteX="7dp"
-        tools:layout_editor_absoluteY="11dp" />
-
-    <EditText
-        android:id="@+id/value"
-        android:layout_width="195dp"
-        android:layout_height="46dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="value"
-        tools:layout_editor_absoluteX="7dp"
-        tools:layout_editor_absoluteY="67dp" />
-
-    <EditText
-        android:id="@+id/toDate"
+        android:id="@+id/locationEntered"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="date"
-        tools:layout_editor_absoluteX="93dp"
-        tools:layout_editor_absoluteY="182dp" />
-
-    <EditText
-        android:id="@+id/fromDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="date"
-        tools:layout_editor_absoluteX="94dp"
-        tools:layout_editor_absoluteY="130dp" />
-
-    <TextView
-        android:id="@+id/From"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="From"
-        tools:layout_editor_absoluteX="50dp"
-        tools:layout_editor_absoluteY="146dp" />
-
-    <TextView
-        android:id="@+id/to"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="To"
-        tools:layout_editor_absoluteX="59dp"
-        tools:layout_editor_absoluteY="194dp" />
-
-    <EditText
-        android:id="@+id/key2"
-        android:layout_width="180dp"
-        android:layout_height="44dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="key"
-        tools:layout_editor_absoluteX="230dp"
-        tools:layout_editor_absoluteY="11dp" />
-
-    <EditText
-        android:id="@+id/value2"
-        android:layout_width="177dp"
-        android:layout_height="47dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="103dp"
+        android:layout_marginTop="177dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="value"
-        tools:layout_editor_absoluteX="229dp"
-        tools:layout_editor_absoluteY="67dp" />
+        android:text="Location" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="100dp"
+        android:layout_marginTop="110dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Person" />
+
+    <Button
+        android:id="@+id/searchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="43dp"
+        android:layout_marginTop="248dp"
+        android:text="Search" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="295dp"
+        android:layout_height="242dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="168dp"
+        app:srcCompat="@android:drawable/list_selector_background" />
+
+    <Button
+        android:id="@+id/addTagButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="247dp"
+        android:text="Add Tags To Search" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="242dp"
+        android:layout_height="30dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="79dp"
+        android:layout_marginTop="35dp"
+        android:text="Add Tags and then press search" />
+
+    <Button
+        android:id="@+id/Next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="107dp"
+        android:layout_marginEnd="74dp"
+        android:text="Next" />
+
+    <Button
+        android:id="@+id/Prev"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="106dp"
+        android:layout_marginStart="75dp"
+        android:text="Prev" />
+
 </RelativeLayout>
