--- a/app/src/main/res/layout/activity_album_view.xml
+++ b/app/src/main/res/layout/activity_album_view.xml
@@ -86,5 +86,15 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="43dp"
         android:text="Show tags" />
+
+    <Button
+        android:id="@+id/deleteTag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="14dp"
+        android:layout_marginTop="32dp"
+        android:text="Delete Tag" />
 </RelativeLayout>
 
