--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -17,21 +17,21 @@
         android:layout_marginStart="99dp"
         android:layout_marginTop="121dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Location" />
+        android:hint="location"
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginEnd="105dp"
         android:layout_marginTop="74dp"
+        android:layout_marginEnd="105dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Person" />
+        android:hint="person"
+        android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/searchButton"
